// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<button
  className="button_style"
  data-testid="button"
>
  save
</button>
`;

exports[`matches snapshot 2`] = `
<button
  className="button_style"
  data-testid="button"
>
  click me please
</button>
`;
